--- a/src/components/Lightbox.astro
+++ b/src/components/Lightbox.astro
@@ -1,15 +1,17 @@
 ---
 interface Props {
   src: string;
+  alt: string;
   width?: string;
   height?: string;
 }
 
-const { src, width, height } = Astro.props;
+const { src, alt, width, height } = Astro.props;
 ---
 
 <img
   src={src}
+  alt={alt}
   data-glightbox="gallery"
   data-gallery="gallery"
   width={width}
