--- a/src/components/Lightbox.astro
+++ b/src/components/Lightbox.astro
@@ -1,22 +1,24 @@
 ---
+import { Image } from "astro:assets";
+
 interface Props {
   src: string;
   alt: string;
-  width?: string;
-  height?: string;
+  width: number;
+  height: number;
 }
 
 const { src, alt, width, height } = Astro.props;
 ---
 
-<img
+<Image
   src={src}
   alt={alt}
-  data-glightbox="gallery"
-  data-gallery="gallery"
   width={width}
   height={height}
   style="cursor: pointer;"
+  data-glightbox="gallery"
+  data-gallery="gallery"
 />
 
 <script>
